Fixed translate page button layouts on iOS.

--- a/app/client/src/pages/translate/translate.scss
+++ b/app/client/src/pages/translate/translate.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  position: relative;
 
   &:before {
     content: "";
@@ -17,11 +18,11 @@
 }
 
 .background {
-  width: 100%;
-  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   z-index: -1;
   background-size: cover;
   background-repeat: no-repeat;
@@ -37,6 +38,7 @@ app-translation-selector {
 .current-language,
 .change-language {
   @include text-button;
+  flex: 0 0 auto;
   margin-bottom: 20px;
   color: mat-contrast($app-inverted, 500);
   font-size: 20px;
